deployments/load-balancers/trust-domain-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tdd-<TDD_ID>-spirl-server-agent
  namespace: tdd-<TDD_ID>-test-alb
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
    service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
    # TLS termination at NLB
    service.beta.kubernetes.io/aws-load-balancer-ssl-cert: "<YOUR-CERT-ARN>"
    service.beta.kubernetes.io/aws-load-balancer-ssl-ports: "443"
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: "tcp"
spec:
  type: LoadBalancer
  ports:
  - name: grpc
    port: 443
    targetPort: agent
    protocol: TCP
