deployments/load-balancers/trust-domain-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tdd-<TDD_ID>-spirl-server-agent
  namespace: tdd-<TDD_ID>
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/backend-protocol-version: GRPC
    alb.ingress.kubernetes.io/certificate-arn: "<YOUR-CERT-ARN>"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-2-2021-06
    alb.ingress.kubernetes.io/success-codes: "0-99"
    alb.ingress.kubernetes.io/target-group-attributes: load_balancing.algorithm.type=least_outstanding_requests
    alb.ingress.kubernetes.io/healthcheck-path: /grpc.health.v1.Health/Check
  labels:
    app: spirl-server-ingress
spec:
  ingressClassName: alb
  rules:
  - host: <AGENT_ENDPOINT>
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tdd-<TDD_ID>-spirl-server-agent
            port:
              number: 80
